@@ -1,0 +1,17 @@
+RL	daily build	04.05.1999	 1262
+RL3	daily build	28.07.1999	 1425
+RLPMM	0.100 alpha	10.12.1999	 3261
+RLPMM	0.190 alpha	24.12.1999	 4070
+RLPMM	0.191 alpha	26.12.1999	 4175
+RLPMM	0.192 alpha	26.01.2000	 4397
+RLPMM	0.193 alpha	20.02.2000	 5139
+RL5	0.200 alpha	11.02.2001	 7129
+RL5	0.210 alpha	25.03.2001	 8876
+RL5	0.220 alpha	23.04.2001	10567
+RL5	daily build	27.04.2001	10733
+IVAN	0.230 alpha	01.05.2001	12086
+IVAN	0.240 alpha	27.07.2001	14547
+IVAN	0.300 alpha	20.11.2001	25001
+IVAN	0.301 alpha	10.12.2001	26583
+IVAN	0.310 alpha	04.02.2002	31924
+IVAN	0.311 alpha	25.02.2002	32209
